--- a/index.html
+++ b/index.html
@@ -2,190 +2,249 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        * {
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            width: 100%;
-            overflow-x: hidden;
-            height: 10000px;
-        }
-        .logo {
-      position: relative;
-      top: 20px;
-      left: 50%;
-      transform: translate(-50%);
-      width: 250px;
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Barcelona todolist</title>
+  <style>
+    * {
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
     }
 
-        h1 {
-            /* white-space: nowrap; hichvaght khat nemishkane. */
-            white-space: nowrap;
-            position: fixed;
-            top: 300px;
-            left: 50%;
-            /* کل المان رو به اندازه‌ی نصف عرض خودش به چپ ببر (یعنی -50%).
-             این باعث می‌شه مرکز المان دقیقاً بیفته وسط صفحه. */
-            transform: translateX(-50%);
-            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-            text-transform: uppercase;
-            font-size: 100px;
-        }
+    body {
+      background: linear-gradient(135deg, #0a0f3c 50%, #7a0623 50%);
+      height: 100vh;
+      position: relative;
+    }
 
-        #sec1 {
-            width: 100%;
-            height: 300vh;
-            background-color: rgba(0, 0, 0, 0.94);
-            margin-top: 300vh;
-            /* chon to layout bemone. */
-            position: relative;
-            z-index: 9999;
+    .logo {
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      width: 100px;
+    }
+
+    .todo {
+      background-color: white;
+      width: 500px;
+      padding: 15px;
+      border: 2px solid #0a0f3c;
+      border-radius: 10px;
+      margin: 100px auto;
+      box-shadow: 10px 20px rgba black;
+
+      >* {
+        width: 100%;
+        font-family: Arial, Helvetica, sans-serif;
+      }
+
+      >input {
+        height: 40px;
+        padding: 5px 10px;
+        border: 2px solid #0a0f3c;
+        border-radius: 5px;
+        font-size: 16px;
+      }
+
+      >button {
+        margin-block: 10px;
+        height: 40px;
+        background-color: #0a0f3c;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        font-size: 16px;
+        cursor: pointer;
+        transition: 0.5s;
+      }
+
+      >button:hover {
+        background-color: #7a0623;
+      }
+
+      >ul {
+        display: flex;
+        flex-wrap: wrap;
+
+
+        >li {
+          width: 100%;
+          list-style-type: none;
+          margin: 10px 0;
+          background-color: #e6e6e6;
+          border-left: 5px solid #0a0f3c;
+          display: flex;
+          height: 60px;
+          position: relative;
+          transition: 0.5s;
+          border-radius: 5px;
+          overflow: hidden;
+
+          >* {
+            display: block;
+          }
+
+          >.line {
             display: flex;
-            flex-wrap: wrap;
+            width: 0;
+            height: 3px;
+            border-radius: 2px;
+            background-color: #7a0623;
+            position: absolute;
+            left: 0;
+            top: 29px;
+            transition: 0.5s;
+          }
+
+          >h3 {
+            width: 350px;
+            display: flex;
+            align-items: center;
+            text-transform: capitalize;
+            padding-left: 10px;
+          }
+
+          >span {
+            width: 50px;
+            height: 100%;
+            display: flex;
             justify-content: center;
-
-            >p {
-                width: 60%;
-                color: white;
-                font-size: 20px;
-                margin: 100px 0;
-                text-align: center;
-
-            }
+            align-items: center;
+            cursor: pointer;
+            font-size: 20px;
+          }
         }
+      }
+    }
 
-        video {
-            width: 85%;
-            position: fixed;
-            top: 600px;
-            left: 7.5%;
+    .left {
+      transform: translateX(-1500px);
+    }
+
+    #garbage {
+      width: 300px;
+      position: fixed;
+      top: 0;
+      right: 0;
+      background-color: #7a0623;
+      padding: 10px;
+      border-bottom-left-radius: 10px;
+
+      >li {
+        color: white;
+        border-bottom: 1px solid black;
+        display: flex;
+        justify-content: space-between;
+        height: 50px;
+        align-items: center;
+        font-family: Arial, Helvetica, sans-serif;
+        padding-inline: 10px;
+
+        >span {
+          cursor: pointer;
         }
+      }
+    }
 
-        /* az koja befahmim scroll be jai reside ke sec2 gharar dare? */
-        #sec2 {
-            width: 100%;
-            /* chon position fix migire az layout miad biron va dige to ertefa body tasiri nemizare. dar natije be tag body ertefae fake midim ke betonim ba vojode fix bodan scroll konim. */
-            /* height: 300vh; */
-            height: 100vh;
-            /* border: 20px solid black; */
-            background-color: black;
-            position: relative;
-            z-index: 9999;
-
-            >img {
-                width: 100%;
-                height: 100vh;
-                object-fit: cover;
-                transition: 1s;
-                position: fixed;
-                top: 100vh;
-                left: 0;
-            }
-        }
-
-        .fix {
-            position: fixed !important;
-            top: 0 !important;
-            left: 0 !important;
-        }
-    </style>
+    .hide {
+      display: none !important;
+    }
+  </style>
 </head>
 
 <body>
-    <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/4/47/FC_Barcelona_%28crest%29.svg"
+  <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/4/47/FC_Barcelona_%28crest%29.svg"
     alt="Barcelona Logo" />
-    <h1>fc barcelona</h1>
-    <video src="vid/Lamine  Balde  Raphinha in 2025 _ Fc barcelona Ronaldo photos Ronaldo skills.mp4" autoplay muted
-        loop></video>
-    <div id="sec1">
-        <p>The current FC Barcelona squad is a blend of youthful energy and seasoned experience, creating a team full of
-            promise for the future. With young stars like Lamine Yamal and Alejandro Balde bringing fearless creativity
-            to the pitch, the team plays with the kind of boldness that excites fans worldwide. Their speed, skill, and
-            confidence make them a constant threat, turning every match into a stage for something special.</p>
-        <p>In midfield, the heartbeat of Barcelona still beats strong. Players like Pedri and Gavi combine intelligence,
-            vision, and tireless work rate to control games from start to finish. They embody the club’s famous
-            tiki-taka philosophy, moving the ball with quick, precise passes that frustrate opponents and thrill
-            supporters. Behind them, experienced leaders ensure the team remains balanced and disciplined.</p>
-        <p>Up front, the attack is spearheaded by talents like Raphinha and Ferran Torres, capable of breaking defenses
-            with pace and flair. Their understanding with the midfield allows Barcelona to create scoring opportunities
-            out of nothing. Under Xavi’s guidance, this team is not only rebuilding but also rediscovering the magic
-            that made Barcelona one of the most feared and admired clubs in the world.</p>
-    </div>
-    <div id="sec2">
-        <img src="pic/Camp Nou.jpg" alt="">
-        <img src="pic/Messi 600.jpg" alt="">
-        <img src="pic/Part of this team.jpg" alt="">
-    </div>
-</body>
-<script>
-    const sec2 = document.querySelector('#sec2')
-    const h1 = document.querySelector('h1')
-    const video = document.querySelector('video')
-    const imgs = document.querySelectorAll('#sec2>img')
 
-    ////////// calc offsetSec2
-    // sec2.dataset.temp=sec2.offsetTop
-    let sec2Offset = sec2.offsetTop
+  <div class="todo">
+    <input autofocus type="text" placeholder="write your list😎">
+    <button>add</button>
+    <ul id="list"></ul>
+  </div>
 
-    window.addEventListener('scroll', (e) => {
-        let st = parseInt(scrollY)
-        console.log(st);
+  <ul id="garbage"></ul>
 
-        ///////////////////////////////////////h1
-        // h1 arom biad bala. // ba in kar meghdare top taghir mikone pas dige h1 fix nist. 
-        h1.style.top = (300 - (st / 2.5)) + 'px' // (top h1 - (st/5))
-        // text bozorg beshe.
-        // h1.style.scale=(st/100) // transform ro az bein mibare pas:
-        h1.style.transform = 'translateX(-50%)scale(' + (1 + (st / 2000)) + ')' // +1 baraye inke omran kochik beshe.
+  <script>
+    const inp = document.querySelector('.todo>input')
+    const btn = document.querySelector('.todo>button')
+    const list = document.querySelector('#list')
+    const deleteList = document.getElementById('garbage')
 
-        //////////////////////////////////// video
-        // video.style.scale = (st/500)+1  // width bade ye modati 100 mishe va dige edame nemide be bozorg shodan. // ba video.style.width leftesh ham beham mikhore pas ba scale behtare.
-        console.log(st / 500)
-        if ((st / 1200) <= 1.1) // 1.1 az console.log(st/500) bedast miad meghdaresh.
-        {
-            video.style.top = (600 - (st / 1.5)) + 'px' // zodtar miad bala va ta yejai scroll shod sabet bemone va #sec1 jamesh mikone.
-            video.style.scale = (st / 1200) + 1
-        }
-
-        ///////////////////////////////// sec2
-        // ghadam aval: scroll resid be pain ax fit she va az on pain tar nayad. pa sec2 bayad fit she.
-        //ghadam dovom: tasavir aslan nabashan, vaghti be yejai trsidim be tartib tasvir aval bad dovom bad sevom biad bala.
-        console.log(sec2Offset)
-
-        //////box fixed
-        if ((st) >= sec2Offset) {
-            sec2.classList.add('fix')
-            imgs[0].style.top = '0'
-            //imgs[0].style.scale = '1.1'
-
-        } else {
-            sec2.classList.remove('fix')
-            imgs[0].style.top = '100vh'
-            imgs[0].style.scale = '1'
-        }
-        if ((st) >= (sec2Offset + 800)) //agar 400 ta pain tar omad
-        {
-            imgs[1].style.top = '0'
-            //imgs[1].style.scale = '1.1'
-        } else {
-            imgs[1].style.top = '100vh'
-            imgs[1].style.scale = '1'
-        }
-        if ((st) >= (sec2Offset + 1600)) {
-            imgs[2].style.top = '0'
-            //imgs[2].style.scale = '1.1'
-        } else {
-            imgs[2].style.top = '100vh'
-            imgs[2].style.scale = '1'
-        }
+    btn.addEventListener('click', () => {
+      let temp = inp.value
+      if (temp === '') {
+        alert('write something!')
+      } else {
+        myAdd(temp)
+      }
     })
-</script>
+
+    function myAdd(temp) {
+      let li = document.createElement('li')
+      li.innerHTML = `
+        <span class=line></span>
+        <input class=hide type=text />
+        <h3>${temp}</h3>
+        <span><input type="checkbox" onchange='fnDel(this)'></span>
+        <span onclick=myEdit(this)>📝</span>
+        <span onclick=myDel(this)>❌</span>
+      `
+      list.appendChild(li)
+      inp.value = null
+      inp.focus()
+    }
+
+    function fnDel(s) {
+      if (s.checked) {
+        s.parentElement.previousElementSibling.previousElementSibling.style.width = '300px'
+      } else {
+        s.parentElement.previousElementSibling.previousElementSibling.style.width = '0'
+      }
+    }
+
+    let num = 1
+    function myEdit(s) {
+      if (num % 2) {
+        s.parentElement.children[1].classList.remove('hide')
+        s.parentElement.children[1].value = s.parentElement.children[2].innerText
+        s.innerHTML = '✅'
+      } else {
+        s.parentElement.children[1].classList.add('hide')
+        s.innerHTML = '📝'
+        s.parentElement.children[2].innerText = s.parentElement.children[1].value
+      }
+      num++
+    }
+
+    function myDel(s) {
+      if (confirm('sure?')) {
+        let oldText = s.parentElement.children[2].innerText
+        s.parentElement.classList.add('left')
+        setTimeout(() => {
+          s.parentElement.remove()
+        }, 500);
+
+
+        let li = document.createElement('li')
+        li.innerHTML = `
+                <b>${oldText}</b>
+                <span onclick='addAgain(this)'>✅</span>
+            `
+        deleteList.appendChild(li)
+      }
+    }
+
+    function addAgain(s) {
+      let temp = s.previousElementSibling.innerText
+      s.parentElement.remove()
+      myAdd(temp)
+    }
+
+
+  </script>
+</body>
+
+</html>
 
 </html>
